--- a/stylesheets/channel.css
+++ b/stylesheets/channel.css
@@ -374,6 +374,7 @@
     color: #777;
     font-family: Helvetica;
     font-size: 13px;
+    line-height: 29px;
 }
 
 #content-main-wrap form .fminput .fmfield p.textarea {
