--- a/stylesheets/episode.css
+++ b/stylesheets/episode.css
@@ -310,6 +310,15 @@
     padding-left: 30px;
 }
 
+#ep-list ul li .episode h3 {
+    overflow: hidden;
+    height: 16px;
+    text-overflow: ellipsis;
+    -o-text-overflow: ellipsis;
+    -ms-text-overflow: ellipsis;
+    -moz-binding: url('ellipsis.xml#ellipsis');
+}
+
 @media all and (max-width: 1372px) {
     #ep-list ul li .episode {
         width: 355px;
@@ -346,21 +355,6 @@
     border: none;
 }
 
-#ep-list ul li .episode p.img a span.mask {
-	display: none;
-	position: absolute;
-	top: 10px;
-	left: 10px;
-	z-index: 9;
-	width: 80px;
-	height: 45px;
-	background: none;
-    background-color: #fff;
-    opacity: 0.7;
-    filter: alpha(opacity=70);
-    -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=70)";
-}
-
 #ep-list ul li .episode p.img a img.watermark {
     display: none;
     position: absolute;
@@ -370,7 +364,13 @@
     margin: -16px 0 0 -16px;
 }
 
-#ep-list ul li .episode p.img a:hover span.mask,
+#ep-list ul li .episode p.img a:hover img.img {
+    background-color: #fff;
+    opacity: 0.7;
+    filter: alpha(opacity=70);
+    -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=70)";
+}
+
 #ep-list ul li .episode p.img a:hover img.watermark {
     display: block;
 }
